--- a/azure.yaml
+++ b/azure.yaml
@@ -10,11 +10,11 @@ services:
     project: ./app/backend
     language: py
     # Please check docs/azure_container_apps.md for more information on how to deploy to Azure Container Apps
-    host: containerapp
-    docker:
-      remoteBuild: true
+    # host: containerapp
+    # docker:
+    #   remoteBuild: true
     # Please check docs/azure_app_service.md for more information on how to deploy to Azure App Service
-    # host: appservice
+    host: appservice
     hooks:
       # This hook is called when App Service is the host
       prepackage:
@@ -28,49 +28,49 @@ services:
           run:  cd ../frontend;npm install;npm run build
           interactive: false
           continueOnError: false
-      # This hook is called when Azure Container Apps is the host
-      prebuild:
-        windows:
-          shell: pwsh
-          run:  cd ../frontend;npm install;npm run build
-          interactive: false
-          continueOnError: false
-        posix:
-          shell: sh
-          run:  cd ../frontend;npm install;npm run build
-          interactive: false
-          continueOnError: false
+      # # This hook is called when Azure Container Apps is the host
+      # prebuild:
+      #   windows:
+      #     shell: pwsh
+      #     run:  cd ../frontend;npm install;npm run build
+      #     interactive: false
+      #     continueOnError: false
+      #   posix:
+      #     shell: sh
+      #     run:  cd ../frontend;npm install;npm run build
+      #     interactive: false
+      #     continueOnError: false
   # Un-comment this section if using USE_CLOUD_INGESTION option
-  # document-extractor:
-  #   project: ./app/functions/document_extractor
-  #   language: py
-  #   host: function
-  #   hooks:
-  #     prepackage:
-  #       shell: pwsh
-  #       run: python ../../../scripts/copy_prepdocslib.py
-  #       interactive: false
-  #       continueOnError: false
-  # figure-processor:
-  #   project: ./app/functions/figure_processor
-  #   language: py
-  #   host: function
-  #   hooks:
-  #     prepackage:
-  #       shell: pwsh
-  #       run: python ../../../scripts/copy_prepdocslib.py
-  #       interactive: false
-  #       continueOnError: false
-  # text-processor:
-  #   project: ./app/functions/text_processor
-  #   language: py
-  #   host: function
-  #   hooks:
-  #     prepackage:
-  #       shell: pwsh
-  #       run: python ../../../scripts/copy_prepdocslib.py
-  #       interactive: false
-  #       continueOnError: false
+  document-extractor:
+    project: ./app/functions/document_extractor
+    language: py
+    host: function
+    hooks:
+      prepackage:
+        shell: pwsh
+        run: python ../../../scripts/copy_prepdocslib.py
+        interactive: false
+        continueOnError: false
+  figure-processor:
+    project: ./app/functions/figure_processor
+    language: py
+    host: function
+    hooks:
+      prepackage:
+        shell: pwsh
+        run: python ../../../scripts/copy_prepdocslib.py
+        interactive: false
+        continueOnError: false
+  text-processor:
+    project: ./app/functions/text_processor
+    language: py
+    host: function
+    hooks:
+      prepackage:
+        shell: pwsh
+        run: python ../../../scripts/copy_prepdocslib.py
+        interactive: false
+        continueOnError: false
 hooks:
     preprovision:
       windows:
@@ -83,17 +83,17 @@ hooks:
         run: ./scripts/auth_init.sh
         interactive: true
         continueOnError: false
-    postprovision:
-      windows:
-        shell: pwsh
-        run: ./scripts/auth_update.ps1;./scripts/prepdocs.ps1
-        interactive: true
-        continueOnError: false
-      posix:
-        shell: sh
-        run: ./scripts/auth_update.sh;./scripts/prepdocs.sh
-        interactive: true
-        continueOnError: false
+    # postprovision:
+    #   windows:
+    #     shell: pwsh
+    #     run: ./scripts/auth_update.ps1;./scripts/prepdocs.ps1
+    #     interactive: true
+    #     continueOnError: false
+    #   posix:
+    #     shell: sh
+    #     run: ./scripts/auth_update.sh;./scripts/prepdocs.sh
+    #     interactive: true
+    #     continueOnError: false
     postdeploy:
       windows:
         shell: pwsh
